updates chelmsford docs

--- a/src/pages/chelmsford/severe-weather-accommodation/index.hbs
+++ b/src/pages/chelmsford/severe-weather-accommodation/index.hbs
@@ -38,12 +38,12 @@ location: chelmsford
       <h2 class="h2">Out of Area Support</h2>
       <p>Support is available for those in emergency temporary accommodation across Chelmsford. You can find more details on the support available and where to find them below:</p>
       <ul>
-        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/braintree-support.pdf">Support in Braintree</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/braintree-map.pdf">Braintree street map</a>.</li>
-        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/colchester-support.pdf">Support in Colchester</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/colchester-map.pdf">Colchester street map</a>.</li>
-        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/harlow-support.pdf">Support in Harlow</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/harlow-map.pdf">Harlow street map</a>.</li>
-        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/ipswich-support.pdf">Support in Ipswich</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/ipswich-map.pdf">Ipswich street map</a>.</li>
-        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/southend-support.pdf">Support in Southend</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/southend-map.pdf">Southend street map</a>.</li>
-        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/stanstead-support.pdf">Support in Stanstead</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/stanstead-map.pdf">Stanstead street map</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/braintree-support.pdf">Support in Braintree (printable)</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/colchester-support.pdf">Support in Colchester (printable)</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/harlow-support.pdf">Support in Harlow (printable)</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/ipswich-support.pdf">Support in Ipswich (printable)</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/southend-support.pdf">Support in Southend (printable)</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/stanstead-support.pdf">Support in Stanstead (printable)</a>.</li>
 
       </ul>
     {{> social-share}}
