--- a/src/pages/about/jobs/index.hbs
+++ b/src/pages/about/jobs/index.hbs
@@ -31,8 +31,11 @@ page: jobs
       <p>We are a small team with a big mission - jobs that we are currently recruiting for are listed below. We also rely on volunteers, so if you are interested please get in touch with your skills and availability at <a href="mailto:admin@streetsupport.net">admin@streetsupport.net</a>.</p>
 
       <h2>Current Vacancies</h2>
-      <p>We are not currently recruiting for any full or part time roles, but if you have UX design skills and are available for freelance work, please get in touch at <a href="mailto:jobs@streetsupport.net">jobs@streetsupport.net</a></p>
-{{!-- 
+      <ul>
+        <li><a href="/about/jobs/trustee/trustee-vacancy-advert.pdf">Trustee</a>.</li>
+      </ul>
+      {{!-- <p>We are not currently recruiting for any full or part time roles, but if you have UX design skills and are available for freelance work, please get in touch at <a href="mailto:jobs@streetsupport.net">jobs@streetsupport.net</a></p> --}}
+{{!--
       {{> divider }}
 
       <h2>Volunteering</h2>
