--- a/src/pages/greater-manchester/index.hbs
+++ b/src/pages/greater-manchester/index.hbs
@@ -110,6 +110,9 @@ page: home
         </form>
       </div>
     </div>
+    <div class="home__copy">
+      <div class="js-map"></div>
+    </div>
   </div>
 </div>
 <div class="block block--minor-highlight">
