hides volunteer section from team page

--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -140,11 +140,11 @@ page: team
   </div>
 </div>
 
-<div class="block block--our-team">
+{{!-- <div class="block block--our-team">
   <div class="container">
     <div class="block__content">
       <h1 class="h1">Our Volunteers</h1>
-      <p>Our band of volunteers handle all things data, and are crucial to the building of services on our site. If you have something you’d like our volunteers to work on, please <a href="mailto:soraya@streetsupport.net">contact Soraya</a>.</p>
+      <p>Our band of volunteers handle all things data, and are crucial to the building of services on our site. If you have something you’d like our volunteers to work on, please <a href="mailto:yumi@streetsupport.net">contact Yumi</a>.</p>
       <div class="team-card-container">
 
         <div class="team-card">
@@ -156,7 +156,7 @@ page: team
       </div>
     </div>
   </div>
-</div>
+</div> --}}
 
 
 <div class="block">
