--- a/src/partials/locations/banners/street-aid.hbs
+++ b/src/partials/locations/banners/street-aid.hbs
@@ -2,7 +2,7 @@
 <div class="block block--cambridge-street-aid">
   <div class="container">
     <div class="block__cambridge-street-aid">
-      <iframe class="street-aid-video" src="https://www.youtube.com/embed/dpX2zdyBes8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="street-aid-video" src="https://www.youtube.com/embed/25Hw0nsr0J0?si=J03gI556xKreeZTl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="home__copy home__copy--cambridge-street-aid">
       <a href="https://cambscf.org.uk/cambridge-street-aid">
