--- a/src/pages/birmingham/severe-weather-accommodation/index.hbs
+++ b/src/pages/birmingham/severe-weather-accommodation/index.hbs
@@ -26,13 +26,16 @@ location: birmingham
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <h2 class="h2">When there is extreme weather Trident Reach has confirmed arrangements for offering emergency beds to people experiencing rough sleeping in Birmingham.</h2>
+      <h2 class="h2">SWEP activated in event of Hot Weather?</h2>
+      <p>During hot weather The Rough Sleeper Outreach team will be handing out water & sunscreen during the period & people who are sleeping rough and people who are sleeping rough are advised to seek shade.</p>
+      <p>Shade and Water is available in the Washington Court Games Room and at SIFA Fireside up to 4pm</p>
+      {{!-- <h2 class="h2">When there is extreme weather Trident Reach has confirmed arrangements for offering emergency beds to people experiencing rough sleeping in Birmingham.</h2>
       <p>Trident Reach activates SWEP (severe weather emergency protocol) or CWP (cold weather provision) on behalf of Birmingham City Council. It is activated whenever there is a yellow weather warning in place from the MET office or whenever temperatures have a real feel of zero degrees or below. These criteria go beyond the Homeless Link guidance as it uses real feel temperatures. SWEP is not just for cold weather. SWEP can also be activated during times of extreme heat with a yellow weather warning from the MET office.</p>
 
       <p>If you are rough sleeping when SWEP is activated, or at any other time of the year, you should either present at <a href="https://urldefense.com/v3/__https:/sifafireside.co.uk/__;!!KDVrJyN8Yw!67nsiD7aHwbZkqodH6RfYkIW3XdGiyKcLqSDA239tAQit12JHJsvUIkITxPuBKccoWAzVs0HmoUsdaHMCCXqZ2_7qV14e4QAPWHEtQ$">SIFA Fireside</a> (48-52 Allcock St, Deritend, Birmingham B9 4DY), or make a <a href="https://thestreetlink.org.uk/start">StreetLink</a> self-referral. Once you make a self-referral, Trident Reach’s Rough Sleeper Outreach Team will try to find and contact you to provide you with a bed.</p>
       <p>If you are a member of the public and you see or know someone who you think is sleeping rough, you should make a referral via StreetLink. The referral will be sent to Trident Reach’s Rough Sleeper Outreach Team, who will try and find the rough sleeper and provide them with shelter. The team will make more than one attempt to reach them, and you will be kept updated via StreetLink.</p>
       <p>If there is someone with an immediate risk to life, 999 should be called. StreetLink is not an emergency service.</p>
-      <p>Between Trident Reach’s Washington Court, and other accommodation providers in the city, there are plenty of beds available across Birmingham to accommodate rough sleepers.</p>
+      <p>Between Trident Reach’s Washington Court, and other accommodation providers in the city, there are plenty of beds available across Birmingham to accommodate rough sleepers.</p> --}}
       <a href="https://news.streetsupport.net/tag/swep/" class="btn btn--brand-e">
         <span class="btn__text">Read more about SWEP</span>
       </a>
