updates derbyshire charter

--- a/src/partials/locations/banners/charter-banner-derbyshire.hbs
+++ b/src/partials/locations/banners/charter-banner-derbyshire.hbs
@@ -11,7 +11,7 @@
   <div class="home__copy home__copy--bcp-charter">
     <h1>Derbyshire Homelessness Charter</h1>
     <p>Aiming to end homelessness in Derbyshire by making it everyone’s responsibility.</p>
-    <a class="btn btn--brand-e" href="/derbyshire/charter">
+    <a class="btn btn--brand-e" target="_blank" href="/derbyshire/derbyshire-homelessness-charter.pdf">
       <span class="btn__text">Click here to find out more</span>
     </a>
   </div>
