updates mara bio

--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -53,7 +53,7 @@ page: team
             <img class="team-card__img" src="/assets/img/mugshots/mara.jpg" alt="">
             <h1 class="team-card__heading">Mara Patraiko</h1>
             <h2 class="team-card__subheading">Comms & Engagement</h2>
-            <p class="team-card__content">Mara comes to us from a background of marketing after she decided that the charity sector is where she wants to be. Mara designs and delivers all things communication and content.</p>
+            <p class="team-card__content">Mara designs and delivers all things communication and content, as well as supporting our locations to do the same.</p>
             <a href="mailto:mara@streetsupport.net">Contact Mara</a>
           </div>
         </div>
