updates chelmsford welcoming spaces and food rota

--- a/src/pages/chelmsford/money-help-services/index.hbs
+++ b/src/pages/chelmsford/money-help-services/index.hbs
@@ -33,7 +33,7 @@ location: chelmsford
       <h1 class="h1">Warm Spaces</h1>
       <ul>
         <li>Free and low-cost local places to keep warm this winter</li>
-        <li>Find out more in this <a target="_blank" href="/chelmsford/money-help-services/warm-spaces.pdf">warm spaces document</a></li>
+        <li>Find out more in this <a target="_blank" href="/chelmsford/money-help-services/welcoming-spaces.pdf">welcoming spaces document</a></li>
       </ul>
 
       <h1 class="h1">Advice Services</h1>
