--- a/src/pages/cambridgeshire/index.hbs
+++ b/src/pages/cambridgeshire/index.hbs
@@ -46,7 +46,7 @@ location: cambridgeshire
       <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough ANYWHERE in Cambridgeshire, you can:</p>
       <p>Contact the Street Outreach Team with details of where the rough sleeper can be found on <a href="tel:01223366292">01223 366292</a> from 8am-4pm Mon-Fri.</p>
       <p>Use the Streetlink <a href="https://thestreetlink.org.uk">website</a>.</p>
-      <p>Call the City Council’s Housing Advice Service on <a href="tel:01223 457918">01223 457918</a> 9-5.15pm Mon-Fri or out-of-hours on <a href="tel:0330 053 8109">0330 053 8109</a>. For further information and help to avoid becoming homeless, and to request help with homelessness, please visit <a href="https://www.cambridge.gov.uk/get-help-to-avoid-becoming-homeless">this website</a>.</p>
+      <p>Call the relevant local authority, you'll find the details of each council in Cambridgeshire by visiting the <a href="/cambridgeshire/advice">advice section</a> and selecting "I am homeless, what should I do?".</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/cambridgeshire/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
