fixes food rota link

--- a/src/partials/locations/banners/notts-food-rota.hbs
+++ b/src/partials/locations/banners/notts-food-rota.hbs
@@ -4,7 +4,7 @@
   <div class="home__copy home__copy--notts-food-rota">
     <h1>Nottingham Food Support Rota</h1>
     <p>Here in Nottingham, there are several voluntary sector and faith organisations that provide hot food to people who are homeless or rough sleeping. On most days of the week there is something available morning, noon and night. Please download and print this weekly rota, which is regularly updated as services change.</p>
-    <a class="btn btn--brand-e" target="_blank" href="/nottingham/notts-food-rota-full.jpg">
+    <a class="btn btn--brand-e" target="_blank" href="/nottingham/notts-food-rota-full.png">
       <span class="btn__text">View the full rota</span>
     </a>
   </div>
