adds chelmsford col doc

--- a/src/pages/chelmsford/money-help-services/index.hbs
+++ b/src/pages/chelmsford/money-help-services/index.hbs
@@ -30,6 +30,8 @@ location: chelmsford
 <div class="block">
   <div class="container">
     <div class="block__content">
+      <h1 class="h1">Cost of Living Advice</h1>
+      <p>For advice and guidance on what to do if you're struggling with the increased cost of living, click <a href="/chelmsford/money-help-services/chelmsford-col-ag.pdf">here</a>.</p>
       <h1 class="h1">Warm Spaces</h1>
       <ul>
         <li>Free and low-cost local places to keep warm this winter</li>
